--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h2{
     font-weight: 600;
 }
 
-.name_hero{
+.highlight{
     color:orange;
 }
 
@@ -62,5 +62,38 @@ section{
 
 p{
     color:dimgray;
+}
+
+.single-experience{
+
+    box-shadow: 10px 10px 40px gray;
+    border-radius: 10px;
+    height: 80%;
+}
+
+.experience{
+
+    background-image: url('images/exp-bg.png');
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+#full-stack{
+
+    border-left: 7px solid salmon;
+    border-image: linear-gradient(180deg, salmon, red);
+    border-image-slice: 1;
+}
+
+#learner{
+
+    border-left: 7px solid blue;
+    border-image: linear-gradient(180deg, blue, cyan);
+    border-image-slice: 1;
+}
+
+footer p{
+    text-align: center;
+    font-size:12px;
 }
 
